manifests/10-test-frontend.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-frontend
  labels:
    app: frontend
    tier: web
    app.kubernetes.io/part-of: ckad-namespace-workshop
spec:
  restartPolicy: Never
  containers:
    - name: busybox
      image: busybox:1.37.0
      command:
        - sleep
        - "3600"
      resources:
        requests:
          cpu: 10m
          memory: 16Mi
        limits:
          cpu: 50m
          memory: 32Mi
