manifests/07-service-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  labels:
    app: database
    tier: db
    app.kubernetes.io/part-of: ckad-namespace-workshop
spec:
  clusterIP: None
  selector:
    app: database
    tier: db
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
