manifests/09-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-network-policy
  labels:
    app.kubernetes.io/part-of: ckad-namespace-workshop
spec:
  podSelector:
    matchLabels:
      app: database
      tier: db
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: frontend
              tier: web
      ports:
        - protocol: TCP
          port: 5432
